--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   http: ^0.13.5
   google_mlkit_object_detection: ^0.6.0
   image_picker: ^0.8.6+4
-  google_ml_kit: ^0.13.0
+  path_provider: ^2.0.13
 
 dev_dependencies:
   flutter_test:
@@ -73,6 +73,7 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/ml/IngredientDetector_best-fp16.tflite
+    - assets/ml/IngredientDetector.tflite
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
