--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   google_mlkit_object_detection: ^0.6.0
   image_picker: ^0.8.6+4
   path_provider: ^2.0.13
+  bottom_navy_bar: ^6.0.0
 
 dev_dependencies:
   flutter_test:
