--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   image_picker: ^0.8.6+4
   path_provider: ^2.0.13
   bottom_navy_bar: ^6.0.0
+  youtube_player_flutter: ^8.1.2
 
 dev_dependencies:
   flutter_test:
