--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -34,6 +34,10 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    aaptOptions {
+        noCompress "tflite"
+    }
+
     kotlinOptions {
         jvmTarget = '1.8'
     }
@@ -68,4 +72,6 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+        // Import the Task Vision Library dependency (NNAPI is included
 }
