--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   path_provider: ^2.0.13
   bottom_navy_bar: ^6.0.0
   youtube_player_flutter: ^8.1.2
+  cloud_firestore: ^4.4.4
 
 dev_dependencies:
   flutter_test:
