--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   bottom_navy_bar: ^6.0.0
   youtube_player_flutter: ^8.1.2
   cloud_firestore: ^4.4.4
+  shared_preferences: ^2.1.1
 
 dev_dependencies:
   flutter_test:
@@ -99,11 +100,13 @@ flutter:
         - asset: assets/fonts/poppins/Poppins-SemiBold.ttf
         - asset: assets/fonts/poppins/Poppins-Bold.ttf
         - asset: assets/fonts/poppins/Poppins-ExtraBold.ttf
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+    - family: Nunito
+      fonts:
+        - asset: assets/fonts/nunito/Nunito-Light.ttf
+        - asset: assets/fonts/nunito/Nunito-Regular.ttf
+        - asset: assets/fonts/nunito/Nunito-Medium.ttf
+        - asset: assets/fonts/nunito/Nunito-SemiBold.ttf
+        - asset: assets/fonts/nunito/Nunito-Bold.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
